youfull/objects/Report_Column_New__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Column_Display_Type__c</fullName>
        <label>Column Display Type</label>
        <picklist>
            <picklistValues>
                <fullName>Frozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrollable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Column_Group_Name__c</fullName>
        <label>Column Group Name</label>
        <picklist>
            <picklistValues>
                <fullName>Personal Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fully_Qualified_Name2__c</fullName>
        <description>An additional field for Fully Qualified Name.  For My Team Report, this field is where you will specify Personal KPIs.</description>
        <inlineHelpText>Enter a single field or comma-delimited fields to specify a compound field.</inlineHelpText>
        <label>Fully Qualified Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fully_Qualified_Name__c</fullName>
        <description>For My Team Report, this field is where you will specify Team KPIs.  Personal KPIs will be specified in Fully Qualified Name 2.</description>
        <inlineHelpText>Enter a single field or comma-delimited fields to specify a compound field.</inlineHelpText>
        <label>Fully Qualified Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Hover_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Hover_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Config__c</fullName>
        <label>Report Config</label>
        <referenceTo>Report_Config__c</referenceTo>
        <relationshipLabel>Report Column</relationshipLabel>
        <relationshipName>Report_Column</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Always Displayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default Shown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Report Column</label>
    <nameField>
        <label>Report Columns Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Column</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>